==> pesora/Waveshare/Open429I/source/29.TOUCH/1.TOUCH 4.3inch 480x272/BSP/TouchPanel.c <==
#include "TouchPanel.h"
#include "stm324x9i_lcd.h"
#include "spi.h"
#define TP_hspi hspi2
#define THRESHOLD 2

static void WR_CMD (uint8_t cmd)  
{ 
	HAL_SPI_Transmit(&TP_hspi,&cmd,1,1000);
}

static int RD_AD(void)  
{ 
	uint8_t buf[2];
	int value;
	HAL_SPI_Receive(&TP_hspi,buf,2,1000);
	value = (uint16_t)((buf[0] << 8) +buf[1]) >> 3;
	return value;
}

void DrawCross(uint16_t Xpos,uint16_t Ypos)
{
  BSP_LCD_DrawHLine(Xpos-13, Ypos, 10);
	BSP_LCD_DrawHLine(Xpos+4, Ypos, 10);
	BSP_LCD_DrawVLine(Xpos, Ypos-13, 10);
	BSP_LCD_DrawVLine(Xpos, Ypos+4, 10);	

}

void TouchPanel_Calibrate(void)
{
  uint8_t i;
  Coordinate * Ptr;

  for(i=0;i<3;i++)
  {
	  BSP_LCD_SetFont(&Font12);
		BSP_LCD_Clear(LCD_COLOR_WHITE);
		BSP_LCD_SetTextColor(LCD_COLOR_BLACK); 
		BSP_LCD_DisplayStringAtLine(1, (uint8_t*)"Touch crosshair to calibrate");
		HAL_Delay(50);
		DrawCross(DisplaySample[i].x,DisplaySample[i].y);
		do
		{
			Ptr=Read_Ads7846();
		}
		while( Ptr == (void*)0 );
		ScreenSample[i].x= Ptr->x; ScreenSample[i].y= Ptr->y;
  }
  setCalibrationMatrix( &DisplaySample[0],&ScreenSample[0],&matrix );
  BSP_LCD_Clear(LCD_COLOR_BLACK);
}
